Update expense categories in index.html for better tracking

--- a/index.html
+++ b/index.html
@@ -225,13 +225,21 @@
                 'Other Income'
             ],
             expense: [
+                'Rent',
+                'Debt/Loans',
+                'Groceries',
+                'Dining Out',
                 'Food',
                 'Transport',
-                'Shopping',
-                'Bills',
-                'Entertainment',
-                'Health',
-                'Education',
+                'Utilities/Bills',
+                'Household',
+                'Kids/School',
+                'Healthcare',
+                'Personal/Shopping',
+                'Fees/Docs',
+                'Gifts/Events',
+                'Nanny Salary',
+                'Play School (Son)',
                 'Other Expense'
             ]
         };
