Update currency definitions: add USD and adjust order of currencies

--- a/index.html
+++ b/index.html
@@ -283,16 +283,15 @@
         // Currency definitions
         const currencies = {
             INR: { symbol: '₹', name: 'Indian Rupee' },
-            JPY: { symbol: '¥', name: 'Japanese Yen' },
+            THB: { symbol: '฿', name: 'Thai Baht' },
+            USD: { symbol: '$', name: 'US Dollar' },
             EUR: { symbol: '€', name: 'Euro' },
             GBP: { symbol: '£', name: 'British Pound' },
+            JPY: { symbol: '¥', name: 'Japanese Yen' },
             CNY: { symbol: '¥', name: 'Chinese Yuan' },
-            AUD: { symbol: 'A$', name: 'Australian Dollar' },
-            CAD: { symbol: 'C$', name: 'Canadian Dollar' },
-            CHF: { symbol: 'Fr', name: 'Swiss Franc' },
-            THB: { symbol: '฿', name: 'Thai Baht' },
             SGD: { symbol: 'S$', name: 'Singapore Dollar' },
             HKD: { symbol: 'HK$', name: 'Hong Kong Dollar' },
+            AUD: { symbol: 'A$', name: 'Australian Dollar' },
             NZD: { symbol: 'NZ$', name: 'New Zealand Dollar' },
             KRW: { symbol: '₩', name: 'South Korean Won' },
             MYR: { symbol: 'RM', name: 'Malaysian Ringgit' },
@@ -301,9 +300,8 @@
             VND: { symbol: '₫', name: 'Vietnamese Dong' },
             AED: { symbol: 'د.إ', name: 'UAE Dirham' },
             SAR: { symbol: 'SR', name: 'Saudi Riyal' },
-            USD: { symbol: '$', name: 'US Dollar' }
-
-
+            CHF: { symbol: 'Fr', name: 'Swiss Franc' },
+            CAD: { symbol: 'C$', name: 'Canadian Dollar' }
         };
 
         // Get current currency
