Enhance transaction item layout with conditional styling for income and expense types

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 const sign = isIncome ? '+' : '-';
 
                 return `
-                    <div class="transaction-item">
+                    <div class="transaction-item ${t.type}">
                         <div class="transaction-icon ${t.type}">
                             ${icon}
                         </div>
