Update styles and introduce design tokens for improved theming
- Updated version number in styles.css to 3.5.1
- Refactored styles in styles.css to utilize CSS variables for colors, spacing, and typography
- Added new tokens.css file containing design tokens for colors, shadows, borders, and spacing
- Included tokens.css in index.html to ensure styles are applied consistently across the application

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         integrity="sha384-RwhG+8423fpoSoUMjpibFzMxLQeaO7oBV45/+IxuLaxxiUOFL9R+OzbK5rBpSazc" crossorigin="anonymous">
 
     <!-- External Stylesheets -->
+    <link rel="stylesheet" href="./css/tokens.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/dark-mode.css">
 </head>
