feat: update dark mode styles for better contrast and enhance header icon

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <!-- Header -->
         <header>
             <div class="header-content">
-                <h1><i class="ri-wallet-3-line"></i> <span class="title-text"><span class="fin-text">Fin</span><span class="chronicle-text">Chronicle</span></span></h1>
+                <h1><i class="ri-donut-chart-line"></i> <span class="title-text"><span class="fin-text">Fin</span><span class="chronicle-text">Chronicle</span></span></h1>
                 <div class="header-meta">
                     <span class="status-inline"><span class="status-dot"></span> Offline</span>
                     <span class="version" id="appVersion">v3.7.1</span>
