fix: Update README for version 3.10.2 and enhance grouping functionality in app

--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
             <!-- Groups Tab -->
             <div id="groupsTab" class="tab-content" role="tabpanel" aria-labelledby="groups-tab">
                 <div class="filters">
-                    <button class="filter-btn active" onclick="changeGrouping('month')">By Month</button>
-                    <button class="filter-btn" onclick="changeGrouping('category')">By Category</button>
+                    <button class="filter-btn active" onclick="changeGrouping('month', event)">By Month</button>
+                    <button class="filter-btn" onclick="changeGrouping('category', event)">By Category</button>
                 </div>
                 <div id="groupedContent"></div>
             </div>
